[Fix]: Large gap between info text and username input field

--- a/Clones/CodeWithHarry Clone/css/partials/modal.css
+++ b/Clones/CodeWithHarry Clone/css/partials/modal.css
@@ -3,3 +3,10 @@
     margin-right: 1rem;
     float: right;
 }
+small{
+    color: grey;
+    font-size: 1.25rem;
+}
+.signup-modal .form .form-group #login-username{
+    margin-bottom: 0.5rem !important;
+}
